@@ -9,6 +9,9 @@ TODO:
 
 version 1.44:
 
+	Improvements:
+	- move documentation about format strings to ::Message.
+
 version 1.43: Fri  5 Dec 11:32:36 CET 2025
 
 	Improvements:
